<resources>
    <string name="app_name">RecyclerView</string>
    <string name="full_name">Full Name</string>
    <string name="profession">Profession</string>
    <string name="career">Career</string>
    <string name="contacts">Contacts</string>
    <string name="add_contacts">Add contacts</string>
    <string name="acquainted">Let\'s get acquainted</string>
    <string name="fillOut">Fill out the profile and go to the application!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="remember_me">Remember me</string>
    <string name="google">GOOGLE</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="register">REGISTER</string>
    <string name="by_clicking">By clicking Register you agree to our Terms and Conditions</string>
    <string name="or">or</string>
    <string name="settings">Settings</string>
    <string name="home_address">Home address</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="s_has_been_removed">%s has been removed</string>
    <string name="restore">Restore</string>
    <string name="add_contact">Add contact</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="name_lastname_placeholder">Name Lastname</string>
    <string name="career_placeholder">Career</string>
    <string name="home_address_placeholder">Home address</string>
    <string name="button_message">message</string>
    <string name="text_view_profile">Profile</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="view_contacts_button">View my contacts</string>
    <string name="username">Username</string>
    <!--   Main activity   -->
    <string name="default_name">Name</string>
    <string name="default_lastname">Lastname</string>
    <string name="error_email">Email is invalid</string>
    <!--    Auth screen -->
    <string name="greeting">Let\'s get acquainted</string>
    <string name="fill_form_proposal">Fill out the profile and go to the application!</string>
    <string name="email_placeholder">E-mail</string>
    <string name="password_placeholder">Password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="google_button" translatable="false">Google</string>
    <string name="register_button">Register</string>
    <string name="terms_agreement">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="terms_agreement_land">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_acc_question">Already have an account?</string>
    <string name="sign_in_button">Sign in</string>
    <!-- fragment contacts -->
    <string name="contacts_removed">Contacts has been removed</string>
    <string name="contact_removed">Contact has been removed</string>
    <string name="no_results_found">No results found</string>
    <string name="you_can_see_more_contacts_in_the_recommendation">You can see more contacts in the recommendation</string>
    <!-- fragment dialog -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="log_out">Log out</string>
    <!-- fragment sign in -->
    <string name="hello" translatable="false">Hello!</string>
    <string name="enter_your_email_and_password_bellow" translatable="false">Enter your email and password bellow</string>
    <string name="forgot_your_password" translatable="false">Forgot your password?</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="don_t_have_account" translatable="false">Don\'t have account?</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="your_profile_data" translatable="false">Your profile data</string>
    <string name="fill_out_the_profile" translatable="false">Fill out the profile and go to the application!</string>
    <string name="user_name" translatable="false">User name</string>
    <string name="mobile_phone" translatable="false">Mobile phone</string>
    <string name="forward" translatable="false">FORWARD</string>
    <string name="operation_error" translatable="false">Operation error!</string>
    <!-- errors -->
    <string name="not_correct_input">Invalid email or password</string>
    <string name="automatic_login_error">Automatic login error</string>
    <string name="register_error_user_exist">User already exists</string>
    <string name="invalid_request">Invalid request</string>
    <string name="invalid_username">Invalid user name</string>
    <string name="invalid_mobile_phone">Invalid mobile phone</string>
    <string name="already_have_this_a_contact">Already have this a contact</string>
    <string name="contact_not_found">Contact not found</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <!-- fragment users -->
    <string name="add">Add</string>
    <string name="users">Users</string>
    <string name="phone_must_be_at_least_10_digits_long">Phone must be at least 10 digits long</string>
    <string name="user_name_must_contain_at_least_3_letters">User name must contain at least 3 letters</string>
</resources>