<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_margin"
        android:text="@string/add_contact"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_normal_size"
        android:fontFamily="@font/example6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/full_name"
        android:textColor="@color/gray"
        android:fontFamily="@font/example6"
        app:layout_constraintStart_toStartOf="@id/textInputFullName"
        app:layout_constraintTop_toBottomOf="@id/textViewAddContact" />
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextFullName"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCareerNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/career"
        android:fontFamily="@font/example6"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/textInputFullName"
        app:layout_constraintTop_toBottomOf="@id/textInputFullName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputCareer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewCareerNew">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextCareer"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:maxLength="30"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bc_gray_frame"
        android:fontFamily="@font/example6"
        android:text="@string/button_cancel"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/textInputCareer"
        app:layout_constraintTop_toBottomOf="@id/textInputCareer"
        app:layout_constraintWidth_percent="0.4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bc_view_my_contacts"
        android:text="@string/button_add"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textInputCareer"
        app:layout_constraintTop_toBottomOf="@id/textInputCareer"
        app:layout_constraintWidth_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>