<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/view_top_half_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background"
        app:layout_constraintBottom_toTopOf="@id/view_bottom_half_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_bottom_half_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_top_half_background" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSettings"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_middle"
        android:layout_marginTop="@dimen/margin_middle"
        android:text="@string/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnlogOut"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/btn_edit_profile"
        android:text="@string/log_out"
        android:textColor="@color/color_text_additional"
        app:layout_constraintTop_toTopOf="@id/tvSettings"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="544dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAvatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginTop="@dimen/margin_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettings"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:srcCompat="@drawable/baseline_person_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFullName"
        style="@style/text_big"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/name_lastname_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCareer"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:text="@string/career_placeholder"
        android:textColor="@color/color_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddress"
        style="@style/text_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:text="@string/home_address_placeholder"
        android:textColor="@color/color_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCareer" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ic_links_margin"
        app:layout_constraintEnd_toStartOf="@id/ivLinkedin"
        app:layout_constraintTop_toTopOf="@id/ivLinkedin"
        app:srcCompat="@drawable/ic_link_facebook" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLinkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ic_links_margin_top"
        app:layout_constraintEnd_toEndOf="@id/view_bottom_half_background"
        app:layout_constraintStart_toStartOf="@id/view_bottom_half_background"
        app:layout_constraintTop_toTopOf="@id/view_bottom_half_background"
        app:srcCompat="@drawable/ic_link_linkedin" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivInstagram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ic_links_margin"
        app:layout_constraintStart_toEndOf="@+id/ivLinkedin"
        app:layout_constraintTop_toTopOf="@+id/ivLinkedin"
        app:srcCompat="@drawable/ic_link_instagram" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEditProfile"
        style="@style/text_middle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_register"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/btn_edit_profile"
        android:text="@string/edit_profile_button"
        android:textAllCaps="false"
        android:textColor="@color/color_text_additional"
        app:layout_constraintBottom_toTopOf="@id/btnViewContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnViewContacts"
        style="@style/text_button"
        android:textColor="?attr/colorControlNormal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_btn_register"
        android:layout_margin="@dimen/margin_default"
        android:background="@drawable/btn_view_contacts"
        android:text="@string/view_contacts_button"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>